--- a/house.html
+++ b/house.html
@@ -9,5 +9,7 @@
     <h1>Chao ban</h1>
     <h2>Câu hỏi</h2>
     <h3>Hôm nay b thế nào?</h3>
+    <h2>Câu trả lời</h2>
+    <h3>Tớ ổn</h3>
   </body>
 </html>
